# project-kit

./: .changie.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml
.changes/: README.md
.changes/unreleased/: backbone-minor-20260704-000000-fold465router.yaml  backbone-minor-20260704-235618-54747a2c.yaml  backbone-minor-20260705-112017-d0c4f592.yaml  backbone-minor-20260705-140000-release-merge.yaml  backbone-minor-20260705-150000-publish-notes.yaml  backbone-minor-20260707-000300-shareable-autobroaden.yaml  backbone-none-20260705-160000-drifttag.yaml  backbone-none-20260707-000000-cor041-remediation.yaml  backbone-none-20260708-000000-collision-precedence-doc.yaml  backbone-patch-20260705-160000-drifttag.yaml  backbone-patch-20260707-000100-guard-decision-hint.yaml  backbone-patch-20260707-010000-changeset-guard-release-exempt.yaml  backbone-patch-20260707-020000-ci-gate-dedupe-stale-runs.yaml  backbone-patch-20260707-150000-sync-downgrade-guard.yaml  backbone-patch-20260707-160000-register-adopt-incubated.yaml  backbone-patch-20260708-010000-schema-companion-scope.yaml  backbone-patch-20260708-120000-deploy-degrade-not-abort.yaml  backbone-patch-20260710-549.yaml  claude-code-patch-20260708-103000-deploy-degrades-on-unresolvable-item.yaml  project-management-minor-20260707-000200-merge-ci-gate.yaml  project-management-minor-20260707-153000-set-instance.yaml  project-management-minor-20260710-544.yaml  project-management-none-20260707-120000-instance-ownership-design.yaml  project-management-none-20260707-140000-ownership-seam.yaml  project-management-none-20260707-150000-set-instance.yaml  project-management-patch-20260707-020000-ci-gate-dedupe-stale-runs.yaml  project-management-patch-20260710-545.yaml
.claude/: settings.json
.claude/agents/: architect.md  convention-compliance-reviewer.md  critic.md  methodology-reviewer.md  project-manager.md  reviewer.md
.claude/skills/bundle-author/: SKILL.md
.claude/skills/demo-recording/: SKILL.md  hook-author.md  new-bundle.md  start.md  stop.md  storyboard-author.md  validate.md  windows.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  docs.yml  feature.yml
.github/workflows/: checks.yml  release-pr.yml  release-tag.yml
.pkit/: .gitignore  README.md  VERSION  manifest.yaml
.pkit/adapters/claude-code/: README.md  deploy-agents.sh  deploy-skills.sh  package.yaml  permission-enforcement.yaml  permission-hook.py
.pkit/agents/: README.md
.pkit/agents/core/: architect.md  methodology-reviewer.md
.pkit/agents/project/: overlay.yaml
.pkit/capabilities/demo-recording/: README.md  package.yaml
.pkit/capabilities/project-management/: README.md  manifest.yaml  package.yaml
.pkit/cli/: README.md
.pkit/decisions/: README.md
.pkit/decisions/core/: COR-010-resource-lifecycle.md  COR-017-capability-pattern.md  COR-019-schema-reference-form.md  COR-031-capability-origin.md  COR-031-process-substrate.md  COR-032-keyed-process-subjects.md  COR-033-process-substrate.md  COR-034-human-pause-gate.md  COR-035-process-invariants.md  COR-036-process-composition.md  COR-037-process-cascade.md  COR-038-process-connections.md  COR-039-external-system-dependencies.md  COR-039-session-repo-mutation-boundary.md  COR-040-process-open-region.md  COR-041-external-source-distribution.md
.pkit/decisions/project/: PRJ-001-cli-binary-name.md  PRJ-002-version-bump-policy.md  PRJ-003-implementation-language.md  PRJ-005-adopt-adrs.md  (+3 more)
.pkit/lifecycle/: README.md
.pkit/permissions/: README.md  decide.py  diagnose_capture.py
.pkit/process/: README.md
.pkit/release/: README.md
.pkit/rules/: core.md  project.md
.pkit/schemas/: README.md  confinement-toolkit.schema.json  confinement-toolkit.yaml  privilege-catalog.schema.json  privilege-catalog.yaml
demo/greenfield-setup/: record.sh  record.yaml
scripts/: check.sh  pkit-router
src/project_kit/: __init__.py  __main__.py  agents.py  agents_overlay.py  capabilities.py  changesets.py  cli.py  cli_render.py  data_validate.py  decisions.py  decisions_validate.py  dispatcher.py  install.py  manifest.py  merge.py  migrations.py  permissions.py  process.py  process_graph.py  refs.py  release.py  router.py  scaffolds.py  schemas.py  schemas_authoring.py  schemas_validate.py  scratchpads.py  settings_consolidate.py  status.py  storyboards.py  sync.py  treecopy.py  upgrade.py  validate.py  versioning.py  visibility.py
tests/: test_agents_overlay.py  test_capabilities.py  test_changesets.py  test_cli.py  test_cli_render.py  test_cli_render_style.py  test_cli_render_wrap.py  test_data_validate.py  test_decisions.py  test_decisions_validate.py  test_deploy_agents.py  test_deploy_skills.py  test_dispatcher.py  test_entrypoint_exec_bit.py  test_evidence_validate.py  test_install.py  test_manifest.py  test_merge.py  test_merge_claude_md_sh.py  test_merge_settings_sh.py  test_migration_96_rules_area.py  test_migrations.py  test_migrations_check.py  test_new_adapter.py  test_new_agent.py  test_new_area.py  test_new_capability.py  test_new_migration.py  test_new_scratchpad.py  test_new_storyboard.py  test_parity.py  test_permission_decide.py  test_permission_diagnose.py  test_permission_hook.py  test_permission_projection.py  test_permissions_cli.py  test_permissions_fragment_authoring.py  test_pm_add_workstream.py  test_pm_adopt_existing.py  test_pm_agent_verdicts.py  (+111 more)
(+266 files in other folders)
